Updated Автор (markdown)

--- a/Автор.md
+++ b/Автор.md
@@ -45,6 +45,8 @@ P.S. Много обо мне на личном [сайте](wladradchenko.ru).
 
 ### Контакты:
 
+Не стесняйтесь обращаться ко мне за профессиональной консультацией по разработке и внедрению нейронных сетей в продукты.
+
 Автор: [Wladislav Radchenko](https://github.com/wladradchenko/)
 
 Почта: [i@wladradchenko.ru](https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/i@wladradchenko.ru)
