Updated Автор (markdown)

--- a/Автор.md
+++ b/Автор.md
@@ -1,11 +1,11 @@
 ### Немного обо мне
 
-Я работаю в основном над Linux и веб-сервисами.
-Верстаю сверточные нейронные сети и алгоритмы машинного обучения на основе научных статей.
-Работаю с вери биг данными в Clickhouse, PostgreSQL и MySQL.
-Генерирую видео-, фото- и аудиоконтент с использованием генеративных нейронных сетей.
-Говорю на языках Английский... Python, JS, Golang.
-Забыл языки C#, Matlab... Итальянский.
+- Я работаю в основном над Linux и веб-сервисами.
+- Верстаю сверточные нейронные сети и алгоритмы машинного обучения на основе научных статей.
+- Работаю с вери биг данными в Clickhouse, PostgreSQL и MySQL.
+- Генерирую видео-, фото- и аудиоконтент с использованием генеративных нейронных сетей.
+- Говорю на языках Английский... Python, JS, Golang.
+- Забыл языки C#, Matlab... Итальянский.
 
 P.S. Много обо мне на личном [сайте](wladradchenko.ru).
 
