Updated Как изменить директорию по умолчанию для папки .wunjo (markdown)

--- a/Как-изменить-директорию-по-умолчанию-для-папки-.wunjo.md
+++ b/Как-изменить-директорию-по-умолчанию-для-папки-.wunjo.md
@@ -3,7 +3,7 @@
 Если вам нужно изменить местоположение папки `.wunjo`, в которой хранятся результаты синтеза речи, deepfake-видео и модели нейронных сетей, выполните следующие шаги:
 
 1. Откройте директорию, где установлено ваше приложение.
-2. Перейдите к файлу `app/backend/[folders.py](https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/portable/src/backend/folders.py)`.
+2. Перейдите к файлу `app/backend/[folders.py]https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/portable/src/backend/folders.py`.
 3. Добавтье следующую строчку:
 
 ```python
