--- a/Поддержите-проект.md
+++ b/Поддержите-проект.md
@@ -10,6 +10,8 @@
 
 Вы можете угостить меня [чашкой кофе](https://wladradchenko.ru/donat), чтобы выразить свою поддержку. Даже небольшой вклад имеет большое значение и очень ценится!
 
+<img src="https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/acc80acd-0e39-4476-88db-0a10f2098e25" alt="donat" width="250" height="250">
+
 <!-- ДОНАТ -->
 
 ## Другие способы внести свой вклад
