Updated Поддержите проект (markdown)

--- a/Поддержите-проект.md
+++ b/Поддержите-проект.md
@@ -27,7 +27,7 @@
 <!-- КОНТАКТЫ -->
 ## Контакт
 
-Если у вас есть какие-либо вопросы или предложения, не стесняйтесь обращаться к нам:
+Если у вас есть какие-либо вопросы или предложения, не стесняйтесь обращаться ко мне:
 
 - **Автор:** [Владислав Радченко](https://github.com/wladradченко/)
 - **Электронная почта:** [i@wladradченко.ru](mailto:i@wladradченко.ru)
