--- a/Поддержите-проект.md
+++ b/Поддержите-проект.md
@@ -12,6 +12,8 @@
 
 <img src="https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/acc80acd-0e39-4476-88db-0a10f2098e25" alt="donat" width="250" height="250">
 
+Вы можете оставить сообщение для публикации, чтобы каждый видел, кто поддерживает проект, либо если вы хотите остаться анонимным, вы можете так и написать.
+
 <!-- ДОНАТ -->
 
 ## Другие способы внести свой вклад
