Updated Как вручную установить модель преобразования текста в речь (markdown)

--- a/Как-вручную-установить-модель-преобразования-текста-в-речь.md
+++ b/Как-вручную-установить-модель-преобразования-текста-в-речь.md
@@ -1,5 +1,51 @@
 Если автоматическая установка моделей по каким-либо причинам вам не подходит, вы всегда можете скачать и установить их вручную.
 
+## Установка NTLK
+
+1. **Переход в нужную директорию**:  
+Перейдите в директорию `~/.wunjo` на Unix-подобных системах или `%USERPROFILE%/.wunjo` на Windows. Доступ к этой директории можно также получить из приложения, нажав на значок папки в левой части экрана.
+
+   ![скрин 1](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/7e1d14fe-62bd-4d43-a0f2-3c08eea419ca)
+
+2. **Работа с директорией `rtvc`**:  
+В этой директории хранятся голосовые модели для клонирования голоса и NTLK. Она также содержит файл с ссылками для скачивания определённых моделей. 
+
+   ![Screenshot from 2023-09-11 17-11-13](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/f508d1d2-e7e3-40f4-af72-e900d4fc88ca)
+
+3. **Скачивание NTLK punkt**:  
+В директории `nltk_data`, должна быть создана папка `tokenizers`. В `tokenizers` необходимо скачать `https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/packages/tokenizers/punkt.zip` и распаковать:
+
+   ![Screenshot from 2023-09-11 17-13-33](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/8943000c-6134-4153-9d9f-e4337c724b82)
+
+P.S. Обратите внимание, что директория до файлов NTLK puntk: `.wunjo/rtvc/nltk_data/tokenizers/punkt/`
+
+## Установка моделей RTVC
+
+1. **Переход в нужную директорию**:  
+Перейдите в директорию `~/.wunjo` на Unix-подобных системах или `%USERPROFILE%/.wunjo` на Windows. Доступ к этой директории можно также получить из приложения, нажав на значок папки в левой части экрана.
+
+   ![скрин 1](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/7e1d14fe-62bd-4d43-a0f2-3c08eea419ca)
+
+2. **Работа с директорией `rtvc`**:  
+В этой директории хранятся голосовые модели для клонирования голоса и NTLK. Она также содержит файл с ссылками для скачивания определённых моделей. 
+
+   ![Screenshot from 2023-09-11 17-11-13](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/f508d1d2-e7e3-40f4-af72-e900d4fc88ca)
+
+3. **Скачивание моделей RTVC**:
+Откройте файл `rtvc.json`, внутри вы найдете ссылки на скачивание rtvc моделей. Например:
+
+```
+"en": {
+    "encoder": "https://wladradchenko.ru/static/wunjo.wladradchenko.ru/rtvc/encoder/english_encoder.pt",
+    "synthesizer": "https://wladradchenko.ru/static/wunjo.wladradchenko.ru/rtvc/synthesizer/synthesizer.pt",
+    "vocoder": "https://wladradchenko.ru/static/wunjo.wladradchenko.ru/rtvc/vocoder/english_vocoder.pt"
+}
+```
+
+Означает, что вам необходимо создать директорию `.wunjo/rtvc/en` и скачать файлы english_encoder.pt, synthesizer.pt и english_vocoder.pt. Далее переименовать english_encoder.pt в encoder.pt, synthesizer.pt должен называться synthesizer.pt, english_vocoder.pt должен называться vocoder.pt. Аналогично для других языков.
+
+## Установка моделей TTS
+
 1. **Переход в нужную директорию**:  
 Перейдите в директорию `~/.wunjo` на Unix-подобных системах или `%USERPROFILE%/.wunjo` на Windows. Доступ к этой директории можно также получить из приложения, нажав на значок папки в левой части экрана.
 
