Updated Как вручную установить модель преобразования текста в речь (markdown)

--- a/Как-вручную-установить-модель-преобразования-текста-в-речь.md
+++ b/Как-вручную-установить-модель-преобразования-текста-в-речь.md
@@ -17,7 +17,7 @@
 
    ![Screenshot from 2023-09-11 17-13-33](https://github.com/wladradchenko/wunjo.wladradchenko.ru/assets/56233697/8943000c-6134-4153-9d9f-e4337c724b82)
 
-P.S. Обратите внимание, что директория до файлов NTLK puntk: `.wunjo/rtvc/nltk_data/tokenizers/punkt/`
+P.S. Обратите внимание, что директория до файлов NTLK punkt: `.wunjo/rtvc/nltk_data/tokenizers/punkt/`
 
 ## Установка моделей RTVC
 
