Updated Как изменить директорию по умолчанию для папки .wunjo (markdown)

--- a/Как-изменить-директорию-по-умолчанию-для-папки-.wunjo.md
+++ b/Как-изменить-директорию-по-умолчанию-для-папки-.wunjo.md
@@ -6,8 +6,16 @@
 2. Перейдите к файлу `app/backend/[folders.py]https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/portable/src/backend/folders.py`.
 3. Добавтье следующую строчку:
 
-```python
+Для Linux систем:
+
+```
 os.environ["HOME"] = "путь до желаемого диска или папки"
+```
+
+Для Windows:
+
+```
+os.environ["USERPROFILE"] = "N://wunjo"  // путь до желаемого диска и папки
 ```
 
 Здесь `"путь до желаемого диска или папки"` — это место, куда вы хотите перенести папку `.wunjo`.
