--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -4,59 +4,93 @@
 
 #### Установка на Windows
 
-🎥 Подробное видео-руководство по установке на Windows доступно [здесь](https://youtu.be/2qIpJYhOL2U).
+🎥 Подробное видео-руководство по установке на Windows доступно [здесь](https://youtu.be/2qIpJYhOL2U?si=x3N93PcF9pDqPt44).
 
-```bash
-# Для создания анимации необходимо установить ffmpeg и добавить его в системные переменные
+Все зависимости, включая библиотеку ffmpeg, будут установлены автоматически для Windows. Однако, если вы хотите выполнить установку вручную, вы можете скачать ffmpeg — [с официального сайта](https://ffmpeg.org/download.html), затем добавьте путь к переменной среды:
+```
 setx PATH "%PATH%;C:\path\to\ffmpeg\bin"
+```
 
-# Запуск инсталлятора
-wunjo_{version}.msi
+Установщик
+```
+wunjo_{vesrion}.msi
+```
 
-# Важно! При первом запуске синтеза речи, видео (отдельных функций, которые вы ранее не запускали) будут скачаны модели в размере (~1-5 ГБ). Это может занять время.
-# Обратите внимание: если у вас активен файрвол, он может заблокировать загрузку. Скачайте модели вручную.
+Файлы для тестирования синтеза речи и создания дипфейк-видео в [GitHub Example](https://raw.githubusercontent.com/wladradchenko/wunjo.wladradchenko.ru/main/example).
 
-# Настройка прав доступа для deepfake
-icacls "%USERPROFILE%/.wunjo/deepfake/gfpgan/weights/*.pth" /grant:r "Users":(R,W)
+Внимание! При первом запуске синтеза речи или видео загружаются необходимые модели, по этой причине вы должны разрешить приложению подключаться к сети, если вы получите сообщение от брандмауэра. Вы также можете установить все модели вручную, как указано в документации — [GitHub Wiki](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki).
 
-# Очистка кэша
+Сборка работает только на CPU если вы хотите использовать GPU Чтобы ускорить процесс обработки в несколько раз, посетите документацию [GitHub Wiki](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki).
+
+Если у вас возникли проблемы с созданием дипфейков, скорее всего у моделей нет прав на чтение, то вам нужно зайти в директорию .wunjo, открыть консоль и ввести:
+```
+icacls * /grant:r "Users:(R,W)" /T
+```
+
+Внимание! Проверьте, что установлено на вашем компьютере [Visual Studio.](https://visualstudio.microsoft.com/) Потому что для корректной работы dlib необходимы драйверы от Visual Studio, которые обычно по умолчанию предустановлены в Windows.
+
+Удаление кеша
+```
 %USERPROFILE%/.wunjo
 ```
 
 #### Установка на Ubuntu
 
-```bash
-# Установка необходимого компонента для создания анимации
+Для создания анимации вам понадобится установить ffmpeg.
+```
 sudo apt install ffmpeg
+```
 
-# Запуск инсталлятора
-sudo dpkg -i wunjo_{version}.deb
+Установка приложения
+```
+sudo dpkg -i wunjo_{vesrion}.deb
+```
 
-# Важно! При первом запуске синтеза видео будут скачаны модели (~5 ГБ).
+Файлы для тестирования синтеза речи и создания дипфейк-видео в [GitHub Example](https://raw.githubusercontent.com/wladradchenko/wunjo.wladradchenko.ru/main/example).
 
-# Удаление приложения и кэша
+Внимание! При первом запуске синтеза речи или видео загружаются необходимые модели; Вы также можете установить все модели вручную, как указано в документации — [GitHub Wiki](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki).
+
+Если у вас возникли проблемы с переключением на GPU, прочтите документацию по установке драйверов [CUDA](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki).
+
+Удаление приложения
+```
 sudo dpkg -r wunjo
+```
+
+Удаление кеша
+```
 rm -rf ~/.wunjo
 ```
 
 #### Установка на MacOS
 
-```bash
-# Установка необходимого компонента для создания анимации
+Для создания анимации вам понадобится установить ffmpeg.
+```
 brew install ffmpeg 
+```
 
-# Разархивация приложения
-unzip wunjo_macos_{version}.zip
+В связи с тем, что у автора проекта нет лицензии Apple, на данный момент нет возможности создать официальный установщик. Приложение на MacOS будет работать только на CPU, так как отсуствует поддержка CUDA.
 
-# Важно! При первом запуске синтеза видео будут скачаны модели (~5 ГБ).
+Вам нужно будет установить Git, Python3.10.
 
-# Очистка кэша
+Удаление кеша
+```
 rm -rf ~/.wunjo
 ```
 
 #### Запуск проект из GitHub
 
-Требуется 3.8 <= [Python](https://www.python.org/downloads/) <=3.10 и [ffmpeg](https://ffmpeg.org/download.html).
+Требуется 3.10 = [Python](https://www.python.org/downloads/) и [ffmpeg](https://ffmpeg.org/download.html).
+
+Скачайте проект:
+```
+git clone https://github.com/wladradchenko/wunjo.wladradchenko.ru.git
+```
+
+Перейдите в директорию проекта:
+```
+cd wunjo.wladradchenko.ru
+```
 
 Создать виртуальную среду и активировать:
 
@@ -68,10 +102,15 @@ source venv/bin/activate
 Установить зависимости:
 
 ```
+// CPU
 pip install -r requirements.txt
+// GPU
+pip install -r requirements_gpu.txt
 ```
 
-Внимание! При первом запуске синтеза видео, будут скачаны модели в .wunjo/deepfake в размере 1-5Гб в зависимости от запускаемой функции. Это может занять длительное время. Для синтеза речи, модели также будут скачаны, при первом запуске голоса или клонирования голоса.
+Чтобы использовать графический процессор, вам необходимо установить CUDA 11.8. [Как использовать графический процессор в приложении](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki/Как-установить-приложение).
+
+Внимание! При первом запуске синтеза видео, будут скачаны модели в .wunjo в размере 1-10Гб в зависимости от запускаемой функции. Это может занять длительное время. Для синтеза речи, модели также будут скачаны, при первом запуске голоса или клонирования голоса.
 
 Необходимо перейти в директорию portable, чтобы использовать briefcase:
 ```
