Updated Как установить приложение (markdown)

--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -117,6 +117,14 @@ pip install -r requirements_gpu.txt
 cd portable
 ```
 
+Копируйте pyproject.toml для вашей версии приложения:
+```
+// CPU
+cp pyproject_cpu.toml pyproject.toml
+// GPU
+cp pyproject_cpu.toml pyproject.toml
+```
+
 Запустить:
 ```
 briefcase dev
