Updated Как установить приложение (markdown)

--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -117,7 +117,7 @@ pip install -r requirements_gpu.txt
 cd portable
 ```
 
-Скопируйте pyproject.toml для вашей версии приложения:
+Скопируйте `pyproject.toml` для вашей версии приложения:
 ```
 // CPU
 cp pyproject_cpu.toml pyproject.toml
