Updated Как установить приложение (markdown)

--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -4,7 +4,7 @@
 
 #### Установка на Windows
 
-🎥 Подробное видео-руководство по установке на Windows доступно [здесь](https://youtu.be/2qIpJYhOL2U?si=x3N93PcF9pDqPt44).
+🎥 Подробное видео-руководство по установке на Windows доступно [здесь](https://www.youtube.com/watch?v=UzpEcPhSDrk).
 
 Все зависимости, включая библиотеку ffmpeg, будут установлены автоматически для Windows. Однако, если вы хотите выполнить установку вручную, вы можете скачать ffmpeg — [с официального сайта](https://ffmpeg.org/download.html), затем добавьте путь к переменной среды:
 ```
