--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -103,9 +103,11 @@ source venv/bin/activate
 
 ```
 // CPU
-pip install -r requirements.txt
+pip install -r requirements_cpu.txt  // Not MacOS
+// CPU only MacOS
+pip install -r requirements_macos.txt
 // GPU
-pip install -r requirements_gpu.txt
+pip install -r requirements_gpu.txt  // Not MacOS
 ```
 
 Чтобы использовать графический процессор, вам необходимо установить CUDA 11.8. [Как использовать графический процессор в приложении](https://github.com/wladradchenko/wunjo.wladradchenko.ru/wiki/Как-установить-приложение).
