Updated Файл слишком большой (markdown)

--- a/Файл-слишком-большой.md
+++ b/Файл-слишком-большой.md
@@ -24,3 +24,5 @@ def check_tmp_file_uploaded(file_path, retries=10, delay=30):
 В этом коде retries - количество попыток проверки загрузки файла в .wunjo/tmp, а delay - время ожидания между каждой попыткой.
 
 Используйте эти параметры, чтобы настроить поведение приложения в соответствии с вашими требованиями.
+
+Дополнительно, не забывайте, что вы можете уменьшить разрешение файла или разделить его на несколько маленьких для более быстрой загрузки и обработки.
