Updated Файл слишком большой (markdown)

--- a/Файл-слишком-большой.md
+++ b/Файл-слишком-большой.md
@@ -4,7 +4,7 @@
 
 Для настройки времени загрузки файла, откройте файл [general_utils.py](https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/portable/src/backend/general_utils.py) и найдите метод `check_tmp_file_uploaded`. Вы можете изменить параметры в этом методе:
 
-```
+```python
 def check_tmp_file_uploaded(file_path, retries=10, delay=30):
     """
     Проверяет наличие файла с заданным путем с определенным количеством попыток и задержкой между попытками.
