Updated Файл слишком большой (markdown)

--- a/Файл-слишком-большой.md
+++ b/Файл-слишком-большой.md
@@ -1,6 +1,6 @@
 # Решение проблемы с сообщением "File is too big"
 
-При запуске определенного модуля вы можете столкнуться с сообщением "File is too big". Это может указывать на проблему с загрузкой файла в директорию `.wunjo/tmp`. Эта проблема может быть связана как с особенностями браузера, так и с ограничениями кеша памяти. Если вы столкнулись с этой проблемой, вам может потребоваться настроить время загрузки файла под ваши нужды.
+При запуске определенного модуля вы можете столкнуться с сообщением "File is too big". Это может указывать на проблему с загрузкой файла в директорию `.wunjo/tmp`. Эта проблема может быть связана как с особенностями браузера, так и с ограничениями кеша памяти или RAM. Если вы столкнулись с этой проблемой, вам может потребоваться настроить время загрузки файла под ваши нужды.
 
 Для настройки времени загрузки файла, откройте файл [general_utils.py](https://github.com/wladradchenko/wunjo.wladradchenko.ru/blob/main/portable/src/backend/general_utils.py) и найдите метод `check_tmp_file_uploaded`. Вы можете изменить параметры в этом методе:
 
