Updated Файл слишком большой (markdown)

--- a/Файл-слишком-большой.md
+++ b/Файл-слишком-большой.md
@@ -25,4 +25,6 @@ def check_tmp_file_uploaded(file_path, retries=10, delay=30):
 
 Используйте эти параметры, чтобы настроить поведение приложения в соответствии с вашими требованиями.
 
+Если у вас есть ограничение на размер файлов принимаемых браузером, вам нужно увеличить ограничение, например, как по этой [ссылке](https://learn.microsoft.com/en-us/answers/questions/946210/413-request-entity-too-large).
+
 Дополнительно, не забывайте, что вы можете уменьшить разрешение файла или разделить его на несколько маленьких для более быстрой загрузки и обработки.
