Updated Как установить приложение (markdown)

--- a/Как-установить-приложение.md
+++ b/Как-установить-приложение.md
@@ -1,6 +1,6 @@
 ### Установка Wunjo AI
 
-Вы можете скачать инсталляторы для операционных систем Windows, MacOS и Ubuntu на официальном сайте [Wunjo AI](wladradchenko.ru/wunjo).
+Вы можете скачать инсталляторы для операционных систем Windows, MacOS и Ubuntu на официальном сайте [Wunjo AI](https://wladradchenko.ru/wunjo).
 
 #### Установка на Windows
 
